--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,18 @@
+spring:
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: root
+    password: toor
 
+rabbitmq:
+  queue:
+    name: message-queue
+    json:
+      name: message-queue-json
+  exchange:
+    name: message-queue-exchange
+  routing:
+    key: message-queue-routing-key
+    json:
+      key: message-queue-routing-json-key
